# VedaGuard-v2

./: .cursorrules  .gitignore  LICENSE  README.md  VEDAGUARD.md  VEDAGUARD_DPDP_READINESS_CHECKLIST.md  pyrightconfig.json
.github/workflows/: ci.yml  vedaguard-testnet-e2e.yml
vedaguard/: .algokit.toml  .env.testnet.example  .gitignore  README.md  mnemonic.py  package-lock.json  pyproject.toml
vedaguard/.algokit/: .copier-answers.yml
vedaguard/.tours/: getting-started-with-your-algokit-project.tour
vedaguard/scripts/: __init__.py  demo_preflight_testnet.py  fund_testnet_demo_accounts.py  generate_standalone_account.py  handoff_testnet_demo.py  onboard_minor_existing_app_testnet.py  opt_in_child_to_sbt_testnet.py  run_testnet_e2e.py  sync_veda_ui_env.py
vedaguard/smart_contracts/: __main__.py
vedaguard/smart_contracts/artifacts/veda_guard/: VedaGuard.approval.puya.map  VedaGuard.approval.teal  VedaGuard.arc56.json  veda_guard_client.py
vedaguard/smart_contracts/veda_guard/: contract.py  deploy_config.py
vedaguard/tests/: vedaguard_test.py
vedaguard/tests/e2e/: __init__.py  test_testnet_dispenser_and_consent.py
vedaguard/veda-ui/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
vedaguard/veda-ui/src/: App.tsx  vite-env.d.ts
vedaguard/veda-ui/src/components/: AdminConsole.tsx  AdminGateLogin.tsx  ConsentCard.tsx  HandoffSection.tsx  Header.tsx  StatsBar.tsx
vedaguard/veda-ui/src/hooks/: usePeraWallet.ts
